// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for 'US_MA' 'RES001' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES001",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": 2026-12-15T00:00:00.000Z,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 0,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 0,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "I",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "SOR Adult Secondary Education-Educ",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "SOR Adult Secondary Education-Prog",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 10,
        "COMPLETION": 30,
        "EARNED_GOOD_TIME": 0,
        "activity": "Violence Reduction Program (Prog)",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": 2027-02-16T00:00:00.000Z,
    "rtsDate": 2026-11-15T00:00:00.000Z,
    "stateCode": "US_MA",
    "totalCompletionCredit": 30,
    "totalCompletionCreditDaysCalculated": 30,
    "totalStateCredit": 63,
    "totalStateCreditDaysCalculated": 63,
  },
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "Laurence",
    "middleNames": undefined,
    "surname": "Baumbach",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres001",
  "recordId": "us_ma_RES001",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES002' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES002",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": null,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": null,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 80,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 988,
    "totalStateCreditDaysCalculated": 0,
  },
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Dan",
    "middleNames": "Michael",
    "surname": "Krajcik",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres002",
  "recordId": "us_ma_RES002",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES003' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES003",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": 2023-11-03T00:00:00.000Z,
    "creditActivity": [
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-08-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 5,
        "activity": "Reentry Readiness Workshop",
        "creditDate": 2021-09-30T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 7.5,
        "activity": "Institutional Employment",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
      {
        "BOOST": 0,
        "COMPLETION": 0,
        "EARNED_GOOD_TIME": 5,
        "activity": "Reentry Readiness Workshop",
        "creditDate": 2021-10-31T00:00:00.000Z,
        "rating": "S",
      },
    ],
    "isEgtDisabled": false,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": 2023-11-04T00:00:00.000Z,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 0,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 133,
    "totalStateCreditDaysCalculated": 1,
  },
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Israel",
    "middleNames": "Nixon",
    "surname": "Willms",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres003",
  "recordId": "us_ma_RES003",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_MA' 'RES004' 1`] = `
{
  "allEligibleOpportunities": [],
  "displayId": "RES004",
  "facilityId": "DEMO FACILITY",
  "gender": "MALE",
  "metadata": {
    "adjustedMaxReleaseDate": null,
    "creditActivity": [],
    "isEgtDisabled": true,
    "lastUpdatedDate": 2021-12-16T00:00:00.000Z,
    "originalMaxReleaseDate": null,
    "rtsDate": null,
    "stateCode": "US_MA",
    "totalCompletionCredit": 0,
    "totalCompletionCreditDaysCalculated": 0,
    "totalStateCredit": 0,
    "totalStateCreditDaysCalculated": 0,
  },
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Marty",
    "middleNames": undefined,
    "surname": "Fahey",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres004",
  "recordId": "us_ma_RES004",
  "stateCode": "US_MA",
}
`;

exports[`schema for 'US_ME' 'RES001' 1`] = `
{
  "admissionDate": 2013-11-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES001",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES001",
  "personName": {
    "givenNames": "First",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres001",
  "recordId": "us_me_001",
  "releaseDate": 2024-11-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-11-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES002' 1`] = `
{
  "admissionDate": 2018-02-17T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES002",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES002",
  "personName": {
    "givenNames": "Second",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres002",
  "recordId": "us_me_002",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES003' 1`] = `
{
  "admissionDate": 2019-06-18T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES003",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS_FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES003",
  "personName": {
    "givenNames": "Third",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres003",
  "recordId": "us_me_003",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES004' 1`] = `
{
  "admissionDate": 2019-05-18T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "COMMUNITY",
  "displayId": "dRES004",
  "facilityId": "FACILITY NAME",
  "gender": "INTERNAL_UNKNOWN",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES004",
  "personName": {
    "givenNames": "Fourth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres004",
  "recordId": "us_me_004",
  "releaseDate": 2024-01-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES005' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES005",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES005",
  "personName": {
    "givenNames": "Fifth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres005",
  "recordId": "us_me_005",
  "releaseDate": 2024-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-05-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES006' 1`] = `
{
  "admissionDate": 2015-02-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES006",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES006",
  "personName": {
    "givenNames": "Sixth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres006",
  "recordId": "us_me_006",
  "releaseDate": 2024-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-02-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES007' 1`] = `
{
  "admissionDate": 2019-06-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES007",
  "facilityId": "FACILITY NAME",
  "gender": "FEMALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES007",
  "personName": {
    "givenNames": "Seventh",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres007",
  "recordId": "us_me_007",
  "releaseDate": 2023-12-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2021-09-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES008' 1`] = `
{
  "admissionDate": 2015-08-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES008",
  "facilityId": "FACILITY NAME",
  "gender": "TRANS",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES008",
  "personName": {
    "givenNames": "Eighth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "2/3",
  "pseudonymizedId": "anonres008",
  "recordId": "us_me_008",
  "releaseDate": 2024-08-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2021-08-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES009' 1`] = `
{
  "admissionDate": 2014-12-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MINIMUM",
  "displayId": "dRES009",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES009",
  "personName": {
    "givenNames": "Ninth",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres009",
  "recordId": "us_me_009",
  "releaseDate": 2025-02-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT A",
  "usMePortionNeededEligibleDate": 2020-01-16T00:00:00.000Z,
}
`;

exports[`schema for 'US_ME' 'RES998' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES998",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES998",
  "personName": {
    "givenNames": "NoRelease",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "pseudonymizedId": "anonres998",
  "recordId": "us_me_998",
  "stateCode": "US_ME",
  "unitId": "UNIT B",
}
`;

exports[`schema for 'US_ME' 'RES999' 1`] = `
{
  "admissionDate": 2020-05-16T00:00:00.000Z,
  "allEligibleOpportunities": [],
  "custodyLevel": "MEDIUM",
  "displayId": "dRES999",
  "facilityId": "FACILITY NAME",
  "gender": "MALE",
  "metadata": {},
  "officerId": "OFFICER5",
  "personExternalId": "RES999",
  "personName": {
    "givenNames": "Ineligible",
    "surname": "Resident",
  },
  "personType": "RESIDENT",
  "portionServedNeeded": "1/2",
  "pseudonymizedId": "anonres999",
  "recordId": "us_me_999",
  "releaseDate": 2025-05-16T00:00:00.000Z,
  "stateCode": "US_ME",
  "unitId": "UNIT B",
  "usMePortionNeededEligibleDate": 2022-11-16T00:00:00.000Z,
}
`;
